@@ -5,6 +5,11 @@ HISTORY
 1.1.11 (unreleased)
 -------------------
 
+- Do not give a TypeError 'Could not adapt' when trying to adapt a
+  context that is not adaptable to IJSONFolderListing and friends.
+  Instead return nothing in the ajax call.
+  [maurits]
+
 - Do not fail with an ``AttributeError: __of__`` when displaying the
   wysiwyg template called with a context that is not acquisition
   aware.
